fixed the nav spacing issues for arrows

--- a/source/stylesheets/_navigation.css.sass
+++ b/source/stylesheets/_navigation.css.sass
@@ -108,15 +108,15 @@
   border-bottom-color: $oj_grey
   border-left-color: $oj_grey
   position: absolute
-  bottom: 20px
+  bottom: 32px
   cursor: pointer
   z-index: 9999999
   &.fp-prev
     +rotate(45deg)
-    left: 20px
+    left: 30px
   &.fp-next
     +rotate(-135deg)
-    right: 20px
+    right: 30px
 
 
 
